// DBML group export excluding Django system tables
// Generated from Django models and migrations
// Group file: 03_learning_assessment.dbml
// NHOM 3: HOC TAP VA DANH GIA
// Only includes intra-group relationships

// Primary tables
Table Enrollments {
  id integer [pk, not null]
  user_id integer [not null]
  course_id integer
  payment_id integer
  source varchar [not null]
  subscription_id integer
  enrollment_date datetime
  expiry_date datetime
  completion_date datetime
  progress decimal [not null]
  status varchar [not null]
  certificate varchar
  certificate_issue_date datetime
  last_access_date datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table reviews_review {
  id integer [pk, not null]
  course_id integer [not null]
  user_id integer [not null]
  rating integer [not null]
  comment varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  status varchar [not null]
  likes integer [not null]
  report_count integer [not null]
  last_report_reason varchar
  last_reported_at datetime
  instructor_response varchar
  response_at datetime
}

Table LearningProgress {
  id integer [pk, not null]
  user_id integer [not null]
  enrollment_id integer [not null]
  course_id integer [not null]
  lesson_id integer [not null]
  progress_percentage decimal [not null]
  last_accessed datetime [not null]
  status varchar [not null]
  start_time datetime
  completion_date datetime
  time_spent integer
  last_position integer
  is_completed boolean [not null]
  notes varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table QuizQuestions {
  id integer [pk, not null]
  lesson_id integer [not null]
  difficulty varchar [not null]
  question_text varchar [not null]
  question_type varchar [not null]
  options varchar
  correct_answer varchar [not null]
  points integer [not null]
  explanation varchar
  order_number integer
  description varchar
  time_limit integer
  memory_limit integer
  allowed_languages varchar
  starter_code varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table QuizTestCases {
  id integer [pk, not null]
  question_id integer [not null]
  input_data varchar [not null]
  expected_output varchar [not null]
  is_hidden boolean [not null]
  points integer [not null]
  order_number integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  is_deleted boolean [not null]
}

Table Wishlist {
  id integer [pk, not null]
  user_id integer [not null]
  course_id integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table QuizResult {
  id integer [pk, not null]
  enrollment_id integer [not null]
  lesson_id integer [not null]
  start_time datetime
  submit_time datetime
  time_taken integer
  total_questions integer
  corret_answers integer
  total_points integer
  score decimal
  answers varchar
  passed boolean [not null]
  attempt integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table lesson_comments_lessoncomment {
  id integer [pk, not null]
  user_id integer [not null]
  lesson_id integer [not null]
  parent_comment_id integer
  content varchar [not null]
  votes integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table certificates {
  id integer [pk, not null]
  user_id integer [not null]
  course_id integer [not null]
  enrollment_id integer [not null]
  verification_code varchar [not null]
  certificate_url varchar
  issued_at datetime [not null]
  revoked boolean [not null]
  revoked_at datetime
  revoked_by_id integer
  student_name varchar [not null]
  course_title varchar [not null]
  instructor_name varchar
  completion_date datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  is_deleted boolean [not null]
}

Table LearningPaths {
  id integer [pk, not null]
  user_id integer [not null]
  goal_text varchar [not null]
  summary varchar [not null]
  estimated_weeks integer [not null]
  is_archived boolean [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table LearningPathItems {
  id integer [pk, not null]
  path_id integer [not null]
  course_id integer [not null]
  order integer [not null]
  reason varchar [not null]
  is_skippable boolean [not null]
  skippable_reason varchar [not null]
}

// Relationships
Ref: LearningPathItems.path_id > LearningPaths.id
Ref: LearningProgress.enrollment_id > Enrollments.id
Ref: QuizResult.enrollment_id > Enrollments.id
Ref: QuizTestCases.question_id > QuizQuestions.id
Ref: certificates.enrollment_id > Enrollments.id
Ref: lesson_comments_lessoncomment.parent_comment_id > lesson_comments_lessoncomment.id
